--- a/module-config-template.yaml
+++ b/module-config-template.yaml
@@ -18,4 +18,4 @@ icons:
   - name: module-icon
     # TODO: provide docker registry icon
     link: https://raw.githubusercontent.com/kyma-project/kyma/refs/heads/main/docs/assets/logo_icon.svg
-team: Otters
+team: kyma/Otters
